--- a/포지션속성.html
+++ b/포지션속성.html
@@ -12,6 +12,7 @@
             width: 600px;
             height: 300px;
             position: relative;
+            margin-bottom: 100px;
         }
 
         .child {
