--- a/퍼블리싱의모든것.html
+++ b/퍼블리싱의모든것.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>퍼블리싱의모든것</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      퍼블리싱의 모든 것! HTML 인라인 요소, 블록 요소, 인라인블록 요소
+    </title>
     <style>
-        body {
-            color: #000;
-        }
+      body {
+        color: #000;
+      }
 
-        a {
-            color: #000;
-            text-decoration: none;
-            border: 1px solid blue;
-            margin: 40px;
-        }
+      a {
+        color: #000;
+        text-decoration: none;
+        border: 2px solid #ddd;
+        margin: 20px;
+        display: inline-block;
+        width: 200px;
+        text-align: center;
+        padding: 5px;
+        border-radius: 5px;
+      }
 
-        div {
-            border: 1px solid #000;
-            height: 100px;
-            margin: 50px;
-        }
+      div {
+        border: 1px solid #000;
+        height: 100px;
+        margin: 50px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <a href="#none">네이버</a>
     <a href="#none">구글</a>
     <a href="#none">다음사이트</a>
     <div>5</div>
     <div>6</div>
     <div>7</div>
-</body>
-
+  </body>
 </html>
