--- a/제이쿼리 children.html
+++ b/제이쿼리 children.html
@@ -6,32 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제이쿼리(jQuery)(요소탐색 메서드 – children) </title>
-    <style>
-        .menu {
-            padding: 0;
-            list-style: none;
-            width: 200px;
-            /* border: 1px solid red; */
-            text-align: center;
-        }
-
-        .menu li>a {
-            background-color: #000;
-            color: #fff;
-            display: block;
-            padding: 5px;
-        }
-
-        .sub-menu a {
-            display: block;
-            padding: 5px;
-        }
-
-        .sub-menu {
-            border: 1px solid #000;
-            display: none;
-        }
-    </style>
+   <link rel="stylesheet" href="css/제이쿼리 children.css">
 </head>
 
 <body>
@@ -55,8 +30,8 @@
             </div>
         </li>
     </ul>
-    <script src="jquery-2.1.4.js"></script>
-    <script src="children.js"></script>
+    <script src="js/jquery-2.1.4.js"></script>
+    <script src="js/children.js"></script>
 </body>
 
 </html>
