--- a/제이쿼리 기본구문.html
+++ b/제이쿼리 기본구문.html
@@ -14,8 +14,8 @@
     <p>
         태그선택자 a를 클릭했습니다.
     </p>
-    <script src="jquery-2.1.4.js"></script>
-    <script src="제이쿼리 기본구문.js"></script>
+    <script src="js/jquery-2.1.4.js"></script>
+    <script src="js/제이쿼리 기본구문.js"></script>
 </body>
 
 </html>
