--- a/CSS 목록스타일.html
+++ b/CSS 목록스타일.html
@@ -5,17 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS 목록스타일</title>
-    <style>
-      .menu {
-        list-style: none;
-      }
-
-      .menu li:before {
-        content: "♥";
-      }
-    </style>
+    <link rel="stylesheet" href="css/CSS 목록스타일.css">
   </head>
-
   <body>
     <ul class="menu">
       <li>menu-1</li>
