--- a/CSS 자손자식선택자1.html
+++ b/CSS 자손자식선택자1.html
@@ -5,33 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS 자손선택자 vs 자식선택자, 부모요소 vs 자식요소</title>
-    <style>
-      .box {
-        border: 1px solid red;
-        width: 400px;
-        height: 400px;
-      }
-
-      .box > div {
-        border: 1px solid blue;
-        width: 200px;
-        height: 200px;
-        padding: 20px;
-      }
-
-      .box > div div {
-        width: 50px;
-        height: 50px;
-        background-color: #000;
-      }
-    </style>
+    <link rel="stylesheet" href="css/CSS 자손자식선택자1.css">
   </head>
 
   <body>
-    <div class="box">
-      <div>
-        <div></div>
-      </div>
+    <div class="parent">
+      <div class="child"></div>
     </div>
   </body>
 </html>
