--- a/CSS 자손자식선택자2.html
+++ b/CSS 자손자식선택자2.html
@@ -5,24 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS 자손선택자 vs 자식선택자, 부모요소 vs 자식요소</title>
-    <style>
-      .parent {
-        border: 1px solid red;
-        width: 600px;
-        height: 200px;
-      }
-
-      .child {
-        width: 200px;
-        height: 50px;
-        border: 1px solid blue;
-      }
-    </style>
+   <link rel="stylesheet" href="css/CSS 자손자식선택자2.css">
   </head>
 
   <body>
-    <div class="parent">
-      <div class="child"></div>
+    <div class="box">
+      <div>
+        <div></div>
+      </div>
     </div>
   </body>
 </html>
