--- a/CSS 텍스트 스타일.html
+++ b/CSS 텍스트 스타일.html
@@ -5,32 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS 서식관련 속성(텍스트 스타일)</title>
-    <style>
-      body {
-        font-size: 15px;
-        line-height: 1.6em;
-      }
-
-      h1 {
-        font-weight: normal;
-        color: #000;
-        text-decoration: line-through;
-      }
-
-      a {
-        text-decoration: none;
-      }
-
-      p.text {
-        font-weight: bold;
-        font-style: italic;
-        text-align: justify;
-      }
-
-      p.copy {
-        text-transform: lowercase;
-      }
-    </style>
+    <link rel="stylesheet" href="css/CSS 텍스트 스타일.css">
   </head>
 
   <body>
