--- a/CSS 포지션 속성 완벽하게 이해하기.html
+++ b/CSS 포지션 속성 완벽하게 이해하기.html
@@ -5,38 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS 포지션 속성 완벽하게 이해하기</title>
-    <style>
-      .parent {
-        background-color: dodgerblue;
-        width: 600px;
-        height: 300px;
-        position: relative;
-        margin-bottom: 100px;
-      }
-
-      .child {
-        width: 200px;
-        height: 100px;
-        position: absolute;
-        background-color: darkorchid;
-        left: 0;
-        bottom: 0;
-      }
-
-      .parent_1 {
-        position: relative;
-        width: 500px;
-        height: 500px;
-        border: 1px solid #000;
-      }
-
-      .child_1 {
-        position: absolute;
-        background-color: aquamarine;
-        width: 100px;
-        height: 100px;
-      }
-    </style>
+    <link rel="stylesheet" href="css/CSS 포지션 속성 완벽하게 이해하기.css">
   </head>
 
   <body>
