--- a/CSS로 HTML 가로 배치하기.html
+++ b/CSS로 HTML 가로 배치하기.html
@@ -5,81 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS로 HTML 가로 배치하기</title>
-    <style>
-      .parent {
-        border: 5px solid #000;
-        width: 600px;
-        /* height: 200px; */
-        overflow: hidden;
-        text-align: center;
-      }
-
-      .child {
-        background-color: gold;
-        width: 200px;
-        height: 100px;
-        display: inline-block;
-        /* float: right; */
-        /* margin: auto; */
-      }
-
-      .print {
-        border: 5px solid #000;
-        width: 600px;
-        margin: 100px;
-      }
-
-      .top {
-        background-color: pink;
-        height: 50px;
-      }
-
-      .left {
-        background-color: skyblue;
-        height: 100px;
-        width: 200px;
-        float: left;
-      }
-
-      .right {
-        background-color: orange;
-        height: 100px;
-        width: 400px;
-        float: right;
-      }
-
-      .clear {
-        background-color: purple;
-        height: 50px;
-        clear: both;
-      }
-
-      /* section {
-            border: 5px solid #000;
-            width: 600px;
-            overflow: hidden;
-        }
-
-        section article {
-            background-color: goldenrod;
-            width: 200px;
-            height: 100px;
-            float: left;
-            border: 1px solid #000;
-            box-sizing: border-box;
-        } */
-      section {
-        border: 5px solid #000;
-      }
-
-      section article {
-        background-color: goldenrod;
-        width: 200px;
-        height: 100px;
-        border: 1px solid #000;
-        display: inline-block;
-      }
-    </style>
+    <link rel="stylesheet" href="css/CSS로 HTML 가로 배치하기.css" />
   </head>
 
   <body>
