--- a/HTML5 링크 이미지.html
+++ b/HTML5 링크 이미지.html
@@ -5,21 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML5 핵심 태그의 사용법(링크, 이미지)</title>
-    <style>
-      img {
-        border: 1px solid #ddd;
-        margin: 50px;
-      }
-
-      a {
-        display: inline-block;
-        text-align: center;
-        width: 200px;
-        padding: 100px;
-        border-radius: 5px;
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" href="css/HTML5 링크 이미지.css" />
   </head>
 
   <body>
