--- a/퍼블리싱의모든것.html
+++ b/퍼블리싱의모든것.html
@@ -7,29 +7,7 @@
     <title>
       퍼블리싱의 모든 것! HTML 인라인 요소, 블록 요소, 인라인블록 요소
     </title>
-    <style>
-      body {
-        color: #000;
-      }
-
-      a {
-        color: #000;
-        text-decoration: none;
-        border: 2px solid #ddd;
-        margin: 20px;
-        display: inline-block;
-        width: 200px;
-        text-align: center;
-        padding: 5px;
-        border-radius: 5px;
-      }
-
-      div {
-        border: 1px solid #000;
-        height: 100px;
-        margin: 50px;
-      }
-    </style>
+    <link rel="stylesheet" href="css/퍼블리싱의모든것.css">
   </head>
 
   <body>
